[package]
name = "cosmon"
version = "0.0.0"
description = """
Observability tool for Cosmos and other Tendermint applications
"""
authors = [
    "Tony Arcieri <tony@iqlusion.io>",
    "Shella Stephens <shella@iqlusion.io>"
]
license    = "Apache-2.0"
repository = "https://github.com/iqlusioninc/cosmon"
readme     = "README.md"
edition    = "2018"
categories = ["cryptography::cryptocurrencies"]
keywords   = ["cosmos", "tendermint"]

[dependencies]
abscissa_core = "=0.6.0-beta.1"
abscissa_tokio = "=0.6.0-beta.1"
clap = "=3.0.0-beta.5"
chrono = "0.4"
futures = "0.3"
eyre = "0.6"
home = "0.5"
iqhttp = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tendermint = "0.23"
tendermint-config = "0.23"
tendermint-rpc = { version = "0.23", features = ["http-client"] }
tower = { version = "0.4", features = ["buffer", "util"] }
reqwest = "0.11"
thiserror = "1"
toml = "0.5"
tokio = "1"
url = "2"
warp = "0.3"

# optional dependencies
mintscan = { version = "0.1", optional = true }

[dev-dependencies]
once_cell = "1"

[dev-dependencies.abscissa_core]
version = "=0.6.0-beta.1"
features = ["testing"]

[features]
default = ["mintscan"]
