[package]
name = "cosmon"
version = "0.0.0"
description = """
Observability tool for Cosmos and other Tendermint applications
"""
authors = [
    "Tony Arcieri <tony@iqlusion.io>",
    "Shella Stephens <shella@iqlusion.io>"
]
license    = "Apache-2.0"
repository = "https://github.com/iqlusioninc/cosmon"
readme     = "README.md"
edition    = "2018"
categories = ["cryptography::cryptocurrencies"]
keywords   = ["cosmos", "tendermint"]

[dependencies]
abscissa_core = "=0.6.0"
abscissa_tokio = "=0.6.0"
clap = "3"
chrono = { version = "0.4", features = ["serde"] }
datadog = { git = "https://github.com/iqlusioninc/crates" }
futures = "0.3"
eyre = "0.6"
hostname = "0.3"
home = "0.5"
iqhttp = { version = "0.2", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tendermint = "=0.25.0"
tendermint-config = "=0.23.7"
tendermint-rpc = { version = "=0.23.7", features = ["http-client"] }
tower = { version = "0.4", features = ["buffer", "util"] }
reqwest = "0.11"
thiserror = "1"
toml = "0.5"
tokio = "1"
url = "2"
warp = "0.3"

# optional dependencies
mintscan = { version = "0.4", optional = true }

[dev-dependencies]
once_cell = "1"

[dev-dependencies.abscissa_core]
version = "=0.6.0"
features = ["testing"]

[features]
default = ["mintscan"]
